--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,8 @@ SMTP_PORT=
 SENDER_EMAIL=
 SENDER_PASSWORD=
 RECIPIENT_EMAIL=
-# 新增配置项
-COMPARISON_TYPE=YEAR_AVERAGE
-# 可选值: YEAR_AVERAGE, MONTH_AVERAGE, CUSTOM_VALUE
+
+COMPARISON_TYPE=CUSTOM_DAYS_AVERAGE
+# 可选值: YEAR_AVERAGE, MONTH_AVERAGE, CUSTOM_VALUE, CUSTOM_DAYS_AVERAGE
 CUSTOM_VALUE=0.05
+CUSTOM_DAYS=7
